--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
                             <transformers>
                                 <transformer
                                     implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>hello.Greeter</mainClass>
+                                    <mainClass>hello.Greeter.java</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
